--- a/composer.json
+++ b/composer.json
@@ -1,45 +1,40 @@
 {
-  "name": "sunnysideup/core-modules-dev",
-  "description": "Nice modules to include on your dev install.",
-  "type": "silverstripe-vendormodule",
-  "keywords": [
-    "dev",
-    "developer tools"
-  ],
-  "license": "BSD-3-Clause",
-  "require": {
-    "silverstripe/framework": "^5.0",
-    "silverstripe/admin": "^2.0"
-  },
-  "require-dev": {
-    "sunnysideup/sswebpack_engine_only": "dev-master",
-    "silverleague/ideannotator": "*",
-    "phpunit/phpunit": "^9.6",
-    "squizlabs/php_codesniffer": "^3.7",
-    "silverstripe/standards": "^1",
-    "phpstan/extension-installer": "^1.3"
-  },
-  "autoload": {
-    "psr-4": {
-      "Sunnysideup\\CoreModulesDev\\": "src/"
-    }
-  },
-  "extra": {
-    "expose": [
-      "client/dist"
+    "name": "sunnysideup/core-modules-dev",
+    "description": "Nice modules to include on your dev install.",
+    "type": "silverstripe-vendormodule",
+    "keywords": [
+        "dev",
+        "developer tools"
+    ],
+    "license": "BSD-3-Clause",
+    "require": {
+        "phpunit/phpunit": "^9.6",
+        "squizlabs/php_codesniffer": "^3.7",
+        "silverstripe/standards": "^1",
+        "phpstan/extension-installer": "^1.3",
+        "sunnysideup/sswebpack_engine_only": "dev-master",
+        "silverleague/ideannotator": "*",
+        "sunnysideup/database-share-clean-up": "dev-master",
+        "sunnysideup/dataintegritytests": "dev-master",
+        "sunnysideup/delete-members": "dev-master",
+        "sunnysideup/migration-task": "dev-master",
+        "sunnysideup/vardump": "dev-master",
+        "sunnysideup/prettyphoto": "dev-master as 2.0.1",
+        "sunnysideup/templateoverview": "dev-master",
+        "sunnysideup/typography": "dev-master"
+    },
+    "autoload": {
+        "psr-4": {
+            "Sunnysideup\\CoreModulesDev\\": "src/"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "authors": [
+        {
+            "name": "Nicolaas Thiemen Francken",
+            "email": "modules@sunnysideup.co.nz",
+            "role": "lead developer"
+        }
     ]
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "bin": [
-    "bin/npm-build-core-modules-dev.sh",
-    "bin/npm-watch-core-modules-dev.sh"
-  ],
-  "authors": [
-    {
-      "name": "Nicolaas Thiemen Francken",
-      "email": "modules@sunnysideup.co.nz",
-      "role": "lead developer"
-    }
-  ]
 }
