--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     "require": {
         "phpunit/phpunit": "^9.6",
         "squizlabs/php_codesniffer": "^3.7",
-        "silverstripe/standards": "^1",
         "phpstan/extension-installer": "^1.3",
         "sunnysideup/sswebpack_engine_only": "dev-master",
         "silverleague/ideannotator": "*",
@@ -28,6 +27,9 @@
             "Sunnysideup\\CoreModulesDev\\": "src/"
         }
     },
+    "suggests" {
+        "silverstripe/standards": "Great, but phpstan/phpstan causes issues!"
+    }
     "minimum-stability": "dev",
     "prefer-stable": true,
     "authors": [
