--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "sunnysideup/vardump": "dev-master",
         "sunnysideup/templateoverview": "dev-master",
         "sunnysideup/typography": "dev-master"
+        "oddnoc/silverstripe-artefactcleaner": "*",
+        "sunnysideup/cleanup-tables": "dev-master"
     },
     "autoload": {
         "psr-4": {
