--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "sunnysideup/templateoverview": "dev-master",
         "sunnysideup/typography": "dev-master",
         "oddnoc/silverstripe-artefactcleaner": "*",
-        "sunnysideup/cleanup-tables": "dev-master"
+        "sunnysideup/cleanup-tables": "dev-master",
+        "sunnysideup/gitignore": "dev-main"
     },
     "autoload": {
         "psr-4": {
